It works, It works!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,9 @@
 export(fitHierarchicalMigration)
 export(getDailyMean)
 export(getInits)
-export(ggTracks)
 export(mapFits)
+export(plotHierarchicalMigration)
+export(prepData_migration)
 export(scan_tracks)
 export(summarizeMigrationFit)
 import(Rcpp)
